--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,9 +24,6 @@ hmac = "^0.7.1"
 sha2 = "^0.8.1"
 num-integer = "0.1"
 
-# wasm
-wasm-bindgen = "0.2"
-
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
 # all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
@@ -39,6 +36,12 @@ console_error_panic_hook = { version = "0.1.1", optional = true }
 #
 # Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
 wee_alloc = { version = "0.4.2", optional = true }
+
+serde = { version = "1", features = ["derive"] }
+
+[dependencies.wasm-bindgen]
+version = "^0.2"
+features = ["serde-serialize"]
 
 [dev-dependencies]
 bencher = "0.1.5"
