--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ clap = "^2.33"
 hmac = "^0.7.1"
 sha2 = "^0.8.1"
 num-integer = "0.1"
+hex = "0.4.2"
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
