--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ sudo: required
 env:
   global:
     # TODO Update this to match the name of your project.
-    - CRATE_NAME=fair-baccarat
+    - CRATE_NAME=fair
 
 matrix:
   # TODO These are all the build jobs. Adjust as necessary. Comment out what you
