--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "fair"
-version = "0.0.9"
+version = "0.0.10-alpha.0"
 authors = ["Lucas Holder <lucasholderx@gmail.com>"]
 edition = "2018"
 description = "CLI tool and library for verifying provably fair games (baccarat, etc.)."
